# vs-ocr

./: build instructions windows.md  meson.build
docs/: ocr.rst
msvc_project/: TesseractOCR.sln  TesseractOCR.vcxproj  TesseractOCR.vcxproj.filters
src/: ocr.c
